# mercury

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
config/: league_mappings.yaml  settings.yaml
src/: config.py
src/app/: cli.py
src/betting/: kelly.py  tracker.py  value_calculator.py
src/data/: data_store.py  flashscore_scraper.py  injury_scraper.py  league_matcher.py  nba_collector.py  sportsplus_scraper.py  team_names.py
src/features/: builder.py  context.py  form.py  player_impact.py  team_strength.py
src/model/: auto_tuner.py  calibration.py  distribution.py  margin_model.py  preprocessor.py  tuner.py
src/model/backends/: __init__.py  base.py  lightgbm_backend.py  rf_backend.py  ridge_backend.py  xgboost_backend.py
tests/: test_auto_tuner.py  test_backends.py  test_betting.py  test_calibration.py  test_config.py  test_data_store.py  test_distribution.py  test_features.py  test_injury_scraper.py  test_league_matcher.py  test_model.py  test_nba_collector.py  test_player_impact.py  test_scrapers.py  test_team_names.py
