[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sportsbetting"
version = "0.1.0"
description = "Basketball winning margin predictor — find +EV bets on SportsPlus.ph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "nba_api>=1.4",
    "pandas>=2.0",
    "xgboost>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "playwright>=1.40",
    "rapidfuzz>=3.0",
    "streamlit>=1.30",
    "pyyaml>=6.0",
    "click>=8.0",
    "optuna>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "ipykernel",
]

[project.scripts]
sbpicks = "src.app.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not live'"
markers = [
    "live: hit real websites to verify DOM selectors (slow, needs network)",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
